[gd_scene load_steps=4 format=3 uid="uid://d0ankmj0k5j41"]

[ext_resource type="Texture2D" uid="uid://da2y22geu0wvl" path="res://assets/icon/home(1).png" id="2_6ueaa"]
[ext_resource type="Script" path="res://script/quit_button.gd" id="3_56rhh"]
[ext_resource type="AudioStream" uid="uid://cmb6ra5ap4suy" path="res://assets/sound/button-202966.mp3" id="4_y0w10"]

[node name="quit_button" type="Button"]
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(1.805, 0)
offset_left = 42.0
offset_right = 82.0
offset_bottom = 40.0
scale = Vector2(1.3, 1.3)
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/icon_pressed_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/icon_hover_color = Color(0.478431, 0.478431, 0.478431, 1)
action_mode = 0
icon = ExtResource("2_6ueaa")
flat = true
icon_alignment = 1
script = ExtResource("3_56rhh")

[node name="sfx_button_quit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_y0w10")
volume_db = 10.0
bus = &"SFX"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
